src/test/resources/wacc_examples/invalid/semanticErr/imports/nestedImportFilePathNotFound.wacc
# tries to import a file which imports a file that does not exist

# Output:
# Semantic error

# Program:

begin
    include "importFiles/fileWithInvalidImport.wacc"
    skip
end